# XiaoAiMusic

./: .gitignore  Cargo.toml  README.md  config.py  ecosystem.config.cjs  main.py  music_search.py  music_service.py  player_control.py  pyproject.toml
music_search_core/: __init__.py  indexer.py  models.py  search_engine.py  store.py
src/: lib.rs  server.rs
src/connect/: data.rs  handler.rs  message.rs  rpc.rs
src/utils/: task.rs
