[package]
name = "open_xiaoai_server"
version = "1.0.0"
edition = "2021"

[lib]
name = "open_xiaoai_server"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py38"] }
pyo3-async-runtimes = { version = "0.24", features = [
    "attributes",
    "tokio-runtime",
] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
futures = "0.3.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.18.1", features = ["v4"] }
